--- a/clock.css
+++ b/clock.css
@@ -2,6 +2,23 @@
   margin: 0;
   padding: 0;
 }
+.gotoback {
+  display: inline-block;
+  margin: 30px;
+  padding: 10px;
+  font-weight: 700;
+  position: relative;
+  cursor: pointer;
+}
+.gotoback::after {
+  content: '';
+  position: absolute;
+  left: 15px;
+  width: 80px;
+  height: 20px;
+  background-color: rgba(127, 255, 212, 0.767);
+  z-index: -1;
+}
 .container {
   position: fixed;
   top: 50%;
@@ -9,7 +26,9 @@
   transform: translate(-50%, -50%);
   background-color: antiquewhite;
 }
-.container h2 {
+h2 {
+  text-align: center;
+  font-size: 16px;
 }
 .container .clock__analog__container {
   background-image: url(./img/clock.png);
@@ -57,8 +76,8 @@
   border-radius: 50% 50% 0 0;
 }
 .minute {
-  width: 200px;
-  height: 200px;
+  width: 230px;
+  height: 230px;
   z-index: 4;
 }
 .minute::before {
@@ -71,7 +90,7 @@
 }
 .second {
   width: 280px;
-  height: 270px;
+  height: 280px;
 }
 .second::before {
   content: '';
@@ -79,4 +98,11 @@
   width: 4px;
   height: 60%;
   background-color: red;
+}
+
+.btns {
+  position: fixed;
+  bottom: 20%;
+  left: 50%;
+  transform: translateX(-50%);
 }
