--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ body {
   background: rgb(255, 166, 217);
   background: linear-gradient(
     120deg,
-    rgba(255, 166, 217, 1) 0%,
+    rgb(166, 227, 255) 0%,
     rgba(255, 209, 193, 1) 100%
   );
 }
