--- a/clock.css
+++ b/clock.css
@@ -1,4 +1,17 @@
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
+
+@font-face {
+  font-family: 'LAB디지털';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/LAB디지털.woff')
+    format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
 * {
+  font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto,
+    'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR',
+    'Malgun Gothic', sans-serif;
+
   margin: 0;
   padding: 0;
 }
@@ -69,10 +82,12 @@ h2 {
   content: '';
   width: 15px;
   height: 15px;
-  background-color: black;
+  background-color: rgb(24, 24, 24);
   position: absolute;
   z-index: 10;
   border-radius: 50%;
+  box-shadow: inset 2px 1px 4px 1px rgba(255, 255, 255, 0.185),
+    inset -2px -1px 3px 1px rgba(0, 0, 0, 0.185);
 }
 .hour,
 .minute,
@@ -125,17 +140,38 @@ h2 {
   filter: drop-shadow(2px -1px 1px rgb(228, 227, 221));
 }
 .clock__digital__container {
-  width: 500px;
+  min-width: 320px;
+  max-width: 500px;
+  box-sizing: border-box;
+  padding: 10px;
+  height: 80px;
   display: flex;
-  border: 3px solid black;
+  justify-content: space-around;
+  background-color: rgb(17, 17, 17);
   display: none;
+  border-radius: 10px;
+  box-shadow: inset 4px 2px 5px 3px rgba(255, 255, 255, 0.1);
 }
 .clock__digital__container .digital {
-  width: 150px;
-  height: 100px;
-  background-color: aqua;
-  margin: 10px;
+  font-family: 'LAB디지털', cursive;
+  width: 65px;
+  height: 60px;
+  align-self: center;
+  text-align: center;
+  box-sizing: border-box;
+  border-radius: 5px;
+  font-size: 40px;
+  line-height: 60px;
+  padding-left: 5px;
+  letter-spacing: 5px;
+  color: rgb(225, 225, 225);
+  background-color: rgb(41, 41, 41);
+  text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.1),
+    -2px -2px 4px rgba(255, 255, 255, 0.1);
+  box-shadow: 3px 3px 3px 1px rgba(255, 255, 255, 0.247),
+    -2px -2px 3px 0px black;
 }
+
 .btns {
   position: absolute;
   bottom: -30px;
