빵빠레+ , 이모지 전 , css 마무리x

--- a/rocksp.css
+++ b/rocksp.css
@@ -6,9 +6,11 @@ button > i {
   font-size: 50px;
 }
 .container {
-  width: 350px;
+  width: 400px;
 }
 .result__message {
+  width: 300px;
+  margin: auto;
   text-align: center;
   padding: 10px;
   font-size: 20px;
@@ -16,32 +18,34 @@ button > i {
   background-color: aliceblue;
 }
 .game__display {
-  background-color: aqua;
-  width: 350px;
+  width: 400px;
   display: flex;
   justify-content: space-between;
   box-sizing: border-box;
 }
 .game__display .side {
-  margin: 10px;
+  margin: 50px 10px 10px;
   width: 150px;
   height: 150px;
   background-color: bisque;
   box-sizing: border-box;
+  border-radius: 20px;
 }
 .game__display .side .score {
   text-align: center;
-  height: 20px;
+  height: 30px;
   font-size: 16px;
-  line-height: 20px;
+  font-weight: 700;
+  line-height: 30px;
   background-color: blueviolet;
+  border-radius: 20px 20px 0 0;
 }
 #toShowNotResult,
 #realResult,
 #userResult {
   width: 150px;
   font-size: 100px;
-  line-height: 130px;
+  line-height: 120px;
   text-align: center;
   margin: auto;
 }
@@ -51,7 +55,9 @@ button > i {
 }
 
 .container .btns {
+  margin: auto;
   display: flex;
+  width: 350px;
   margin-top: 20px;
   padding: 15px 20px;
   justify-content: space-between;
@@ -78,7 +84,72 @@ button > i {
   transform: translate(0, -10px);
   color: white;
 }
+.container .otherBtn {
+  width: 350px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container .otherBtn button {
+  cursor: pointer;
+  margin: 10px;
+  border: none;
+}
 
-.container .btns li > i {
-  font-size: 50px;
+.container .otherBtn .restart {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border: 2px solid transparent;
+  transition: all 0.8s;
+}
+.container .otherBtn .restart:hover {
+  transform: rotate(180deg);
+  background-color: rgb(81, 182, 81);
+  border: 2px solid rgb(121, 223, 121);
+  color: white;
+}
+
+.container .otherBtn .restart > i {
+  font-size: 30px;
+}
+.container .otherBtn .initialization {
+  width: 80px;
+  font-size: 18px;
+  padding: 10px;
+  border-radius: 10px;
+  border: 2px solid transparent;
+  transition: all 0.8s;
+}
+.container .otherBtn .initialization:hover {
+  box-sizing: border-box;
+  background-color: rgb(81, 182, 81);
+  border: 2px solid rgb(121, 223, 121);
+  color: white;
+}
+.rect {
+  position: absolute;
+  background-color: var(--color);
+  top: 40%;
+  left: calc(50% - var(--ySize));
+  width: calc(var(--xSize) * 2);
+  height: calc(var(--ySize) * 2);
+  animation: popup var(--duration) cubic-bezier(0.43, 0.27, 0, 0.795);
+}
+
+@keyframes popup {
+  0% {
+    opacity: 0;
+  }
+  60% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 0;
+    transform: translate(var(--x), var(--y)) rotate(var(--rotate));
+  }
 }
