--- a/index.css
+++ b/index.css
@@ -68,6 +68,7 @@ li {
   margin: 10px;
   padding: 10px;
   background-color: rgba(135, 135, 135, 0.2);
+  border-radius: 5px;
   transition: display 0.8s;
 }
 .practice__wrapper .prac .dropdown__list .prac__list li {
@@ -75,9 +76,30 @@ li {
   opacity: 0;
   transition: all ease-out 0.3s;
   cursor: pointer;
+  position: relative;
+  color: black;
+  transition: color ease-out 0.5s;
+}
+.practice__wrapper .prac .dropdown__list .prac__list li::after {
+  position: absolute;
+  content: '';
+  top: 10px;
+  left: 20px;
+  width: 0px;
+  height: 20px;
+  border-color: transparent rgba(135, 135, 135, 0.2);
+  border-style: solid dotted;
+  background-color: rgba(255, 240, 73, 0.8);
+  transition: width ease-out 0.5s;
+  opacity: 0;
+  z-index: -1;
 }
 .practice__wrapper .prac .dropdown__list .prac__list li:hover {
-  background-color: rgba(135, 135, 135, 0.6);
+  color: white;
+}
+.practice__wrapper .prac .dropdown__list .prac__list li:hover::after {
+  width: 90%;
+  opacity: 1;
 }
 .custom-shape-divider-top-1654431782 {
   fill: rgba(94, 190, 197, 0.664);
