--- a/index.css
+++ b/index.css
@@ -1,11 +1,5 @@
 @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
 * {
-  margin: 0;
-  padding: 0;
-  font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto,
-    'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR',
-    'Malgun Gothic', sans-serif;
-  letter-spacing: 2px;
   text-align: center;
 }
 span,
@@ -36,22 +30,23 @@ li {
 }
 .practice__wrapper .prac {
   display: flex;
-  font-size: 30px;
+  font-size: 24px;
   align-items: center;
-  margin: 20px;
+  margin: 30px;
 }
 .practice__wrapper .prac .dropdown__list .preview__ul {
   border-bottom: 2px solid black;
-  margin: 10px;
-  padding: 10px;
+  margin: 5px;
+  padding: 5px;
   position: relative;
+  width: 250px;
 }
 .practice__wrapper .prac .dropdown__list .preview__ul .toggle {
   content: '';
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  right: 0;
+  right: -2px;
   width: 0;
   height: 0;
   border-bottom: 5px solid transparent;
@@ -67,29 +62,30 @@ li {
   text-align: center;
   margin: 10px;
   padding: 10px;
-  background-color: rgba(135, 135, 135, 0.2);
+  background-color: rgba(189, 187, 187, 0.2);
   border-radius: 5px;
   transition: display 0.8s;
 }
 .practice__wrapper .prac .dropdown__list .prac__list li {
+  width: 250px;
   height: 0;
   opacity: 0;
   transition: all ease-out 0.3s;
   cursor: pointer;
   position: relative;
   color: black;
-  transition: color ease-out 0.5s;
 }
 .practice__wrapper .prac .dropdown__list .prac__list li::after {
   position: absolute;
   content: '';
   top: 10px;
-  left: 20px;
+  left: 15px;
   width: 0px;
   height: 20px;
   border-color: transparent rgba(135, 135, 135, 0.2);
   border-style: solid dotted;
   background-color: rgba(255, 240, 73, 0.8);
+  transform: skew(2deg, 2deg);
   transition: width ease-out 0.5s;
   opacity: 0;
   z-index: -1;
