--- a/index.css
+++ b/index.css
@@ -40,6 +40,7 @@ li {
   padding: 5px;
   position: relative;
   width: 250px;
+  cursor: pointer;
 }
 .practice__wrapper .prac .dropdown__list .preview__ul .toggle {
   content: '';
