슬라이더 오른쪽 버튼

--- a/imgslider2.css
+++ b/imgslider2.css
@@ -1,5 +1,5 @@
 .container {
-  width: 400px;
+  width: 600px;
   height: 400px;
   position: fixed;
   top: 50%;
@@ -12,7 +12,7 @@
   padding: 10px;
 }
 .container .img__visible {
-  width: 400px;
+  width: 420px;
   height: 220px;
   overflow: hidden;
   position: absolute;
@@ -32,6 +32,7 @@
   width: 400px;
   height: 200px;
   margin: 10px;
+  object-fit: cover;
   /* display: none; */
   /* transition: all ease-out 0.7s; */
 }
