--- a/imgslider2.css
+++ b/imgslider2.css
@@ -5,7 +5,6 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: rgba(136, 136, 136, 0.288);
 }
 .container h2 {
   text-align: center;
@@ -16,14 +15,20 @@
   height: 220px;
   overflow: hidden;
   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 10px;
+  border-width: 2px 3px 1px 0px;
+  border-color: rgb(212, 212, 212);
+  border-style: solid;
 }
 .container .img__wrapper {
   display: flex;
   align-items: center;
   /* width: 400px;
   height: 220px; */
-  background-color: aqua;
-
+  background-color: rgba(255, 255, 255, 0.2);
   position: absolute;
   left: 0;
   transition: left 0.5s;
@@ -33,21 +38,24 @@
   height: 200px;
   margin: 10px;
   object-fit: cover;
+  opacity: 0.9;
   /* display: none; */
   /* transition: all ease-out 0.7s; */
 }
 #nextBtn {
   position: absolute;
   top: 50%;
-  border-radius: 50%;
   padding: 10px;
   border: none;
-  right: calc(50% - 100px);
-  font-size: 32px;
+  right: 30px;
+  font-size: 50px;
   z-index: 10;
-  transform: translate(50%, -50%);
+  transform: translateY(-50%);
   z-index: 10;
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: transparent;
+  color: rgba(255, 255, 255, 0.8);
+  text-shadow: 1px 0px 10px rgba(255, 255, 255, 0.8);
+  cursor: pointer;
 }
 #prevBtn {
   position: absolute;
@@ -55,9 +63,12 @@
   border-radius: 50%;
   padding: 10px;
   border: none;
-  left: calc(50% - 250px);
-  transform: translate(-50%, -50%);
-  font-size: 32px;
+  left: 30px;
+  transform: translateY(-50%);
+  font-size: 50px;
   z-index: 10;
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: transparent;
+  color: rgba(255, 255, 255, 0.8);
+  text-shadow: -1px 0px 10px rgba(255, 255, 255, 0.8);
+  cursor: pointer;
 }
