--- a/index.css
+++ b/index.css
@@ -75,6 +75,7 @@ li {
   cursor: pointer;
   position: relative;
   color: black;
+  font-size: 20px;
 }
 .practice__wrapper .prac .dropdown__list .prac__list li::after {
   position: absolute;
@@ -97,6 +98,7 @@ li {
 .practice__wrapper .prac .dropdown__list .prac__list li:hover::after {
   width: 90%;
   opacity: 1;
+  font-weight: 700;
 }
 .custom-shape-divider-top-1654431782 {
   fill: rgba(94, 190, 197, 0.664);
