--- a/card.css
+++ b/card.css
@@ -29,18 +29,20 @@ body {
   user-select: none; /*인터넷에 찾아서 정리하기 - 사용자가 텍스트를 선택할 수 있는 지 */
   touch-action: none; /* 인터넷에 찾아서 정리하기2 여기서는 이게있어야 모바일에서 동작한다고 함!*/
   /* touch-action : none 의 선언은 브라우저의 확대 / 축소 작동을 제한하여 텍스트의 크기를 고정하기 때문에, 사용자의 접근성을 보장하지 못하는 문제를 가지고 있습니다. 오잉*/
-  transition: all 0.3s;
+  transition: filter 0.3s, right 0.8s;
+  display: none;
 }
 .card:last-child {
-  filter: brightness(1.1);
+  display: flex;
 }
 .card:nth-last-child(2) {
   right: 0px;
+  display: flex;
 
   filter: brightness(0.8);
 }
 .card:nth-last-child(3) {
   right: -30px;
-
+  display: flex;
   filter: brightness(0.8);
 }
