--- a/card.css
+++ b/card.css
@@ -8,6 +8,42 @@ body {
   height: 100%;
   overflow: hidden;
 }
+.background {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  display: flex;
+  /* top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0; */
+}
+.background .likeBackground {
+  flex: 1 1 50%;
+  background: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 0.5) 0%,
+    rgba(0, 0, 0, 0.25) 25%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  opacity: 0;
+  transition: opacity 0.5s;
+  position: relative;
+}
+
+.background .dislikeBackground {
+  position: relative;
+  flex: 1 1 50%;
+  background: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.25) 25%,
+    rgba(0, 0, 0, 0.5) 100%
+  );
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+
 .frame {
   position: relative;
   width: 360px;
