--- a/index.css
+++ b/index.css
@@ -22,7 +22,6 @@ section {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-
   padding: 30px;
 }
 li {
@@ -76,17 +75,18 @@ li {
   position: relative;
   color: black;
   font-size: 20px;
+  line-height: 25px;
 }
 .practice__wrapper .prac .dropdown__list .prac__list li::after {
   position: absolute;
   content: '';
-  top: 10px;
+  top: 8px;
   left: 15px;
   width: 0px;
   height: 20px;
   border-color: transparent rgba(135, 135, 135, 0.2);
   border-style: solid dotted;
-  background-color: rgba(255, 240, 73, 0.8);
+  background-color: rgba(22, 169, 237, 0.8);
   transform: skew(2deg, 2deg);
   transition: width ease-out 0.5s;
   opacity: 0;
@@ -96,9 +96,10 @@ li {
   color: white;
 }
 .practice__wrapper .prac .dropdown__list .prac__list li:hover::after {
-  width: 90%;
+  width: 85%;
   opacity: 1;
   font-weight: 700;
+  transform: skew(2deg, 2deg);
 }
 .custom-shape-divider-top-1654431782 {
   fill: rgba(94, 190, 197, 0.664);
