--- a/imgslider2.css
+++ b/imgslider2.css
@@ -24,6 +24,7 @@
   border-style: solid;
 }
 .container .img__wrapper {
+  overflow: hidden;
   display: flex;
   align-items: center;
   /* width: 400px;
@@ -31,7 +32,7 @@
   background-color: rgba(255, 255, 255, 0.2);
   position: absolute;
   left: 0;
-  transition: left 0.5s;
+  transition: transform 0.5s;
 }
 .container .img__wrapper img {
   width: 400px;
