--- a/imgslider2.css
+++ b/imgslider2.css
@@ -36,15 +36,27 @@
   transition: transform 0.5s;
   touch-action: none;
 }
-.container .img__wrapper img {
+.container .img__wrapper .card {
   width: 400px;
   height: 200px;
   margin: 10px;
-  object-fit: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   opacity: 0.9;
+  user-select: none;
   /* display: none; */
   /* transition: all ease-out 0.7s; */
 }
+.container .img__wrapper .card .title {
+  font-size: 25px;
+  color: white;
+}
+.container .img__wrapper .card .content {
+  font-size: 16px;
+  color: white;
+}
+
 #nextBtn {
   position: absolute;
   top: 50%;
@@ -59,6 +71,7 @@
   color: rgba(255, 255, 255, 0.8);
   text-shadow: 1px 0px 10px rgba(255, 255, 255, 0.8);
   cursor: pointer;
+  user-select: none;
 }
 #prevBtn {
   position: absolute;
@@ -74,4 +87,5 @@
   color: rgba(255, 255, 255, 0.8);
   text-shadow: -1px 0px 10px rgba(255, 255, 255, 0.8);
   cursor: pointer;
+  user-select: none;
 }
