--- a/index.css
+++ b/index.css
@@ -122,6 +122,39 @@ li {
   opacity: 1;
   font-weight: 700;
 }
+.circle {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: var(--color1);
+  border: 2px solid var(--color2);
+  opacity: 0.8;
+  position: absolute;
+  top: var(--y);
+  left: var(--x);
+  z-index: 10;
+  /* transform: translate(var(--x), var(--y)); */
+  filter: drop-shadow(0px 2px 4px var(--color1));
+
+  animation: pointer 1s 1 ease-in-out;
+  animation-fill-mode: forwards;
+}
+.circle::after {
+  content: '';
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 2px solid var(--color2);
+  filter: drop-shadow(0px 2px 2px var(--color2));
+
+  opacity: 0.5;
+  position: absolute;
+  bottom: 0;
+  z-index: -1;
+  animation: pointer 1s 1 ease-in;
+  animation-fill-mode: forwards;
+  animation-delay: 50ms;
+}
 @keyframes title {
   0% {
     background-image: linear-gradient(
@@ -158,5 +191,17 @@ li {
   100% {
     background-image: linear-gradient(0deg, #0091ca, #0091ca);
     background-size: 100% 100%;
+  }
+}
+
+@keyframes pointer {
+  0% {
+    transform: scale(0.5);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
   }
 }
